atual sendo utilizada na azure
